--- a/index.html
+++ b/index.html
@@ -3,64 +3,98 @@
 
 	<head>
 		<meta charset="UTF-8"/>
-		<link rel="shortcut icon" type="image/png" href="google_favicon.png"/>
+		<link rel="shortcut icon" type="image/png" href="images/google_favicon.png"/>
+		<link rel="stylesheet" type="text/css" href="styles.css">
 		<title>Google</title>
 	</head>
 
 	<body>
-		<div class="container">
+			<!-- Header with links -->
 			<header class="header">
 
-				<ul class="top-list-left">
-					<li><a class="about" href="https://www.google.ca/intl/en/about/?fg=1&utm_source=google.com&utm_medium=referral&utm_campaign=hp-header">About</a></li>
-					<li><a class="store" href="https://store.google.com/?utm_source=hp_header&utm_medium=google_oo&utm_campaign=GS100042">Store</a></li>
-				</ul>
+				<div class="top-list-left">
+					<div class="about">
+						<a href="https://www.google.ca/intl/en/about/?fg=1&utm_source=google.com&utm_medium=referral&utm_campaign=hp-header">About</a>
+					</div>
+					<div class="store">
+						<a href="https://store.google.com/?utm_source=hp_header&utm_medium=google_oo&utm_campaign=GS100042">Store</a>
+					</div>
+				</div>
 
-				<ul class="top-list-right">
-					<li><a class="gmail" href="https://accounts.google.com/signin/v2/identifier?continue=https%3A%2F%2Fmyaccount.google.com%2Fintro&followup=https%3A%2F%2Fmyaccount.google.com%2Fintro&osid=1&service=accountsettings&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Gmail</a></li>
-					<li><a class="images" href="https://www.google.ca/imghp?hl=en&tab=wi">Images</a></li>
-				</ul>
-
-				<a class="signin" href="https://accounts.google.com/signin/v2/identifier?continue=https%3A%2F%2Fmyaccount.google.com%2Fintro&followup=https%3A%2F%2Fmyaccount.google.com%2Fintro&osid=1&service=accountsettings&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Sign In</a>
+				<div class="top-list-right">
+					<div class="gmail">
+						<a href="https://accounts.google.com/signin/v2/identifier?continue=https%3A%2F%2Fmyaccount.google.com%2Fintro&followup=https%3A%2F%2Fmyaccount.google.com%2Fintro&osid=1&service=accountsettings&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Gmail</a>
+					</div>
+					<div class="images">
+						<a href="https://www.google.ca/imghp?hl=en&tab=wi">Images</a>
+					</div>
+					<div class="app-grid">
+						<a href="https://get.google.com/apptips/apps/?utm_source=googlemobile&utm_campaign=redirect#!/all"><img src="images/app_grid2.png" class="app-grid-image"></a>
+					</div>
+					<div class="signin">
+						<a href="https://accounts.google.com/signin/v2/identifier?continue=https%3A%2F%2Fmyaccount.google.com%2Fintro&followup=https%3A%2F%2Fmyaccount.google.com%2Fintro&osid=1&service=accountsettings&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Sign In</a>
+					</div>
+				</div>
 
 			</header>
+
+			<!-- Main area with logo, search bar, and links -->
 			<main class="main">
 
-				<img src="google_logo.svg" width="20%">
+				<img class="logo" src="images/google_logo.svg" width="245px">
 
 				<form>
-					<input type="text" name="search">
+					<div class="searchbar">
+						<input type="text" name="searchbar">
+						<div class="microphone">
+							<a href="#"><img src="images/microphone.png" width="60%"></a>
+						</div>
+					</div>
+
+					<div class="search-buttons">
+						<button type="button">Google Search</button>
+						<button type="button">I'm Feeling Lucky</button>
+					</div>
 				</form>
 
-				<ul>
-					<li>Google Search</li>
-					<li>I'm Feeling Lucky</li>
-				</ul>
-
-				<p>Google offered in: <a href="#">Fran&ccedil;ais</a></p>
+				<div class="f">
+					<p>Google offered in: <a class="flink" href="#">Fran&ccedil;ais</a></p>
+				</div>
 				
 			</main>
+
+			<!-- First footer with label "Canada" -->
 			<footer class="footer-1">
 
-				<h4>Canada</h4>
+				<span>Canada</span>
 
 			</footer>
+
+			<!-- Second footer with links -->
 			<footer class="footer-2">
 
-				<ul class="bottom-list-left">
-					<li><a href="https://www.google.ca/intl/en_ca/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></li>
-					<li><a href="https://www.google.ca/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a></li>
-				</ul>
+				<div class="bottom-list-left">
+					<div class="advertising">
+						<a href="https://www.google.ca/intl/en_ca/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
+					</div>
+					<div class="business">
+						<a href="https://www.google.ca/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none">Business</a>
+					</div>
+				</div>
 
-				<ul class="bottom-list-right">
-					<li><a href="https://www.google.ca/intl/en_ca/policies/privacy/?fg=1">Privacy</a></li>
-					<li><a href="https://www.google.ca/intl/en_ca/policies/terms/?fg=1">Terms</a></li>
-					<li><a href="https://www.google.ca/preferences?hl=en">Settings</a></li>
-					<li><a href="https://www.google.com/?gfe_rd=cr&dcr=0&ei=uZLVWsvFEsKFX4fai7AL&gws_rd=cr&fg=1">Use Google.com</a></li>
-				</ul>
+				<div class="bottom-list-right">
+					<div class="privacy">
+						<a href="https://www.google.ca/intl/en_ca/policies/privacy/?fg=1">Privacy</a>
+					</div>
+					<div class="terms">
+						<a href="https://www.google.ca/intl/en_ca/policies/terms/?fg=1">Terms</a>
+					</div>
+					<div class="settings">
+						<a href="https://www.google.ca/preferences?hl=en">Settings</a>
+					</div>
+				</div>
 
 			</footer>
-		</div>
 	</body>
 
 </html>
